# hello-graphql-python-client

./: README.md  pyproject.toml
src/hello_graphql_python_client/: __init__.py  __main__.py
